...
import kotlinx.coroutines.launch

object EventDetailsTestTags {
  const val LOADING_INDICATOR = "loadingIndicator"
  const val ERROR_MESSAGE = "errorMessage"
  const val EVENT_IMAGE = "eventImage"
  const val BACK_BUTTON = "backButton"
  const val EVENT_TITLE = "eventTitle"
  const val EVENT_ASSOCIATION = "eventAssociation"
  const val EVENT_PRICE = "eventPrice"
  const val EVENT_TIME = "eventTime"
  const val EVENT_LOCATION = "eventLocation"
  const val EVENT_DESCRIPTION = "eventDescription"
  const val VIEW_LOCATION_BUTTON = "viewLocationButton"
  const val ENROLL_BUTTON = "enrollButton"
  const val CONTENT = "eventDetailsContent"
}

private const val DEFAULT_EVENT_IMAGE_URL =
    "https://www.epfl.ch/campus/services/events/wp-content/uploads/2024/09/WEB_Image-Home-Events_ORGANISER.png"

...
