...
import ch.epfllife.ui.navigation.NavigationTestTags
import ch.epfllife.ui.theme.LifeRed
import ch.epfllife.utils.SystemToastHelper
import ch.epfllife.utils.ToastHelper

object SettingsScreenTestTags {
  const val SIGN_OUT_BUTTON = "signOutButton"
  const val ADMIN_CONSOLE_BUTTON = "adminConsoleButton"
  const val MANAGE_FRIENDS_BUTTON = "manageFriendsButton"
}

@Composable
fun SettingsScreen(
...
