...
            fontWeight = if (isFollowing) FontWeight.Bold else FontWeight.Normal)
        if (isFollowing) {
          // TODO this still looks meh (improve the design here)
          Spacer(Modifier.width(8.dp))
          // Minimal indicator
          Text(
              text = "(Following)",
              style = MaterialTheme.typography.bodySmall,
              color = MaterialTheme.colorScheme.primary)
        }
      }
}

